--- a/color-flood-3d/package.json
+++ b/color-flood-3d/package.json
@@ -13,6 +13,7 @@
     "test:coverage": "jest --coverage"
   },
   "dependencies": {
+    "@react-spring/three": "^10.0.1",
     "@react-three/drei": "^10.4.2",
     "@react-three/fiber": "^9.2.0",
     "react": "^19.1.0",
