support subdirectory deploy

--- a/color-flood-3d/package.json
+++ b/color-flood-3d/package.json
@@ -10,7 +10,8 @@
     "preview": "vite preview",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --coverage",
+    "deploy": "pnpm build && netlify deploy --dir=dist --config=../netlify.toml --prod"
   },
   "dependencies": {
     "@react-spring/three": "^10.0.1",
@@ -40,6 +41,7 @@
     "ts-jest": "^29.4.0",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.34.1",
-    "vite": "^7.0.0"
+    "vite": "^7.0.0",
+    "netlify-cli": "^17.36.0"
   }
 }
