--- a/color-flood-3d/package.json
+++ b/color-flood-3d/package.json
@@ -18,6 +18,7 @@
     "@react-spring/three": "^10.0.1",
     "@react-three/drei": "^10.4.2",
     "@react-three/fiber": "^9.2.0",
+    "lucide-react": "^0.525.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "three": "^0.178.0",
@@ -40,10 +41,10 @@
     "globals": "^16.2.0",
     "jest": "^30.0.4",
     "jest-environment-jsdom": "^30.0.4",
+    "netlify-cli": "^17.36.0",
     "ts-jest": "^29.4.0",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.34.1",
-    "vite": "^7.0.0",
-    "netlify-cli": "^17.36.0"
+    "vite": "^7.0.0"
   }
 }
