--- a/color-flood-3d/package.json
+++ b/color-flood-3d/package.json
@@ -26,6 +26,7 @@
     "lucide-react": "^0.525.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-router-dom": "^7.6.3",
     "three": "^0.178.0",
     "zustand": "^5.0.6"
   },
@@ -39,6 +40,7 @@
     "@types/jest": "^30.0.0",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
+    "@types/react-router-dom": "^5.3.3",
     "@types/three": "^0.178.0",
     "@vitejs/plugin-react": "^4.5.2",
     "eslint": "^9.29.0",
