--- a/color-flood-3d/package.json
+++ b/color-flood-3d/package.json
@@ -20,9 +20,16 @@
     "deploy": "pnpm build && netlify deploy --dir=dist --config=../netlify.toml --prod"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-tabs": "^1.1.12",
+    "@radix-ui/react-toast": "^1.2.14",
+    "@radix-ui/react-tooltip": "^1.2.7",
+    "@radix-ui/themes": "^3.2.1",
     "@react-spring/three": "^10.0.1",
     "@react-three/drei": "^10.4.2",
     "@react-three/fiber": "^9.2.0",
+    "clsx": "^2.1.1",
     "lucide-react": "^0.525.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
