--- a/color-flood-3d/package.json
+++ b/color-flood-3d/package.json
@@ -30,6 +30,7 @@
     "@react-three/drei": "^10.4.2",
     "@react-three/fiber": "^9.2.0",
     "clsx": "^2.1.1",
+    "immer": "^10.1.1",
     "lucide-react": "^0.525.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
